# pyjippety

./: .env.example  .gitignore  Computer.ppn  README.md  build-pyjippety-bundle.py  build-pyjippety-bundle.sh  install-pyjippety.py  install-pyjippety.sh  package-pyjippety.py  pyproject.toml  requirements.txt  run-pyjippety-gui.py
.github/workflows/: ci.yml  release.yml
.omx/: metrics.json
.omx/logs/: tmux-hook-2026-04-03.jsonl  turns-2026-04-03.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
packaging/flatpak/: com.bots.PyJippety.yml
src/pyjippety/: actions.py  bot.py  config.py  controller.py  gui.py  integrations.py  memory.py  profile_store.py  runtime.py  tray.py  ui_shared.py  views.py
src/pyjippety.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_bot.py  test_memory.py
